--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <!-- Login Screen Strings -->
     <string name="sign_in">Sign In</string>
     <string name="welcome_back">Welcome Back!</string>
-    <string name="login_subtitle">Sign in to continue to AttendEase</string>
+    <string name="login_subtitle">Sign in with your school email to continue</string>
     
     <!-- Input Field Hints -->
     <string name="email_hint">Email Address</string>
@@ -12,9 +12,6 @@
     
     <!-- Additional Login Elements -->
     <string name="forgot_password">Forgot Password?</string>
-    <string name="remember_me">Remember me</string>
-    <string name="dont_have_account">Don\'t have an account?</string>
-    <string name="sign_up">Sign Up</string>
     
     <!-- Error Messages -->
     <string name="email_required">Email is required</string>
